<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:divider="@null"
        android:icon="@drawable/ic_contract"
        android:key="contract_key"
        android:persistent="true"
        android:scrollbarStyle="insideInset"
        android:title="@string/contract"
        />
    <SwitchPreference

        android:divider="@null"
        android:icon="@drawable/ic_sms"
        android:key="sms_key"
        android:persistent="true"
        android:title="@string/sms"
        android:visibility="invisible"
        />
    <SwitchPreference
            android:key="photo_key"
            android:title="@string/photo"
            android:icon="@drawable/ic_photo"
            android:persistent="true"
            android:defaultValue="false"
            />
    <SwitchPreference
        android:key="file_key"
        android:title="@string/file_encrypt"
        android:icon="@drawable/ic_file_encrypt"
        android:persistent="true"
        android:visibility="invisible"
        android:defaultValue="false"
        />
    <ListPreference

        android:key="id"
        android:title="@string/sync_time"
        android:dialogTitle="@string/sync_time"
        android:persistent="true"
        android:entries="@array/Time"
        android:entryValues="@array/Time"
        android:icon="@drawable/ic_time"
        />
    <ListPreference

        android:title="@string/sync_option"
        android:key="op"
        android:dialogTitle="@string/sync_option"
        android:persistent="true"
        android:entries="@array/sync_options"
        android:entryValues="@array/sync_options_values"
        android:icon="@drawable/ic_sync_option"
        />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_find_phone"
        android:persistent="true"
        android:title="@string/find_phone"/>
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_send_last_position"
        android:persistent="true"

        android:title="@string/send_last_position"/>

</PreferenceScreen>

