<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="@color/colorPrimary">

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/buttonBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toobar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            android:background="@color/colorPrimary"
            app:title="@string/identity"
            app:titleTextColor="@color/background"
            >
        </android.support.v7.widget.Toolbar>
    </android.support.v7.widget.ButtonBarLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="72dp"
        android:layout_below="@+id/buttonBarLayout"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:padding="20dp"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="手机号 "
                    android:inputType="phone"
                    android:outlineProvider="background"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="密码"
                    android:inputType="textPassword"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:paddingTop="15dp"
                    android:padding="-10dp">

                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:background="@color/colorPrimary"
                        android:elevation="20dp"
                        android:outlineProvider="background"
                        android:text="@string/login"
                        android:textColor="@color/white"/>

                    <Button
                        android:padding="10dp"
                        android:id="@+id/faceLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/colorPrimary"
                        android:text="@string/face"
                        android:layout_weight="0.5"
                        android:elevation="20dp"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</RelativeLayout>